# cargo-sample

./: Cargo.toml  Makefile  README  README.md
.github/workflows/: release.yml
demo2/: Cargo.toml
src/: main.rs
