[package]
name = "cargo-sample"
description = "A cargo subcommand to quickly set you up with a new rust project based on a crate example"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
argh = "0.1.12"
axum = "0.7.9"
cargo_metadata = "0.19.0"
crates_io_api = "0.11.0"
inquire = "0.7.5"
serde_json = "1.0.133"
tempfile = "3.14.0"
